[package]
name = "tuan"
version = "0.1.0"
edition = "2021"
authors = ["Wicaksana Pratama <wicaksanapratama@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI Program to help manage env"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
git2 = "0.18.1"
indicatif = "0.15.0"
fs_extra = "1.3.0"
